Modified docker file
Added some stuff to the app UI, there is a lot of stuff missing

--- a/API_JAIS/dockerfile
+++ b/API_JAIS/dockerfile
@@ -6,10 +6,11 @@ EXPOSE 443
 # Instala las dependencias del sistema necesarias para MariaDB
 RUN apt update && apt install -y libmariadb-dev gcc
 
-WORKDIR /app
+# Set the working directory directly to /app/api
+WORKDIR /app/api
 
 # Copia les dependències (requirements.txt) dins del contenidor
-COPY api/requirements.txt /app/requirements.txt
+COPY api/requirements.txt /app/api/requirements.txt
 
 # Instal·la les dependències necessàries
 RUN pip install --no-cache-dir -r requirements.txt
@@ -17,6 +18,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copia tota l'aplicació FastAPI dins del contenidor
 COPY api /app/api
 
-CD /app/api
-
-CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/app/api/ssl/key.pem", "--ssl-certfile", "/app/api/ssl/cert.pem"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/app/api/ssl/key.pem", "--ssl-certfile", "/app/api/ssl/cert.pem"]
