--- a/RefereezyApp/app/src/main/AndroidManifest.xml
+++ b/RefereezyApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.RefereezyApp"
         tools:targetApi="31">
         <activity
+            android:name=".PairingClockActivity"
+            android:exported="false" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
