--- a/API_JAIS/dockerfile
+++ b/API_JAIS/dockerfile
@@ -17,5 +17,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copia tota l'aplicació FastAPI dins del contenidor
 COPY api /app/api
+COPY api/ssl /app/api/ssl
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/app/api/ssl/key.pem", "--ssl-certfile", "/app/api/ssl/cert.pem"]
+RUN chmod 600 /app/api/ssl/key.pem /app/api/ssl/cert.pem
+
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/app/api/ssl/key.pem", "--ssl-certfile", "/app/api/ssl/cert.pem"]RUN chmod 600 /app/api/ssl/key.pem /app/api/ssl/cert.pem
