I gave up, now the api will work on port 80

--- a/API_JAIS/dockerfile
+++ b/API_JAIS/dockerfile
@@ -22,4 +22,4 @@ COPY api/ssl /app/api/ssl
 RUN chmod 600 /app/api/ssl/key.pem /app/api/ssl/cert.pem
 
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "/app/api/ssl/key.pem", "--ssl-certfile", "/app/api/ssl/cert.pem"]RUN chmod 600 /app/api/ssl/key.pem /app/api/ssl/cert.pem
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
