--- a/RefereezyApp/app/src/main/AndroidManifest.xml
+++ b/RefereezyApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.RefereezyApp"
         tools:targetApi="31">
         <activity
+            android:name=".ActionsActivity"
+            android:screenOrientation="landscape"
+            android:exported="false" />
+        <activity
             android:name=".PairingClockActivity"
             android:exported="false" />
         <activity
