--- a/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.RellotgeJAIS"
         tools:targetApi="31">
         <activity
+            android:name=".IncidenciasActivity"
+            android:exported="false" />
+        <activity
             android:name=".vititantPlayers"
             android:exported="false" />
         <activity
