--- a/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,13 +15,16 @@
         android:theme="@style/Theme.RefereezyApp"
         tools:targetApi="31">
         <activity
+            android:name=".screens.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".screens.ActionListActivity"
             android:exported="false"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".screens.IncidenceActivity"
             android:exported="false"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
         <activity
             android:name=".screens.PlayerPickActivity"
             android:exported="false"
