--- a/APPS/movil/RefereezyApp/gradle/libs.versions.toml
+++ b/APPS/movil/RefereezyApp/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.5.0"
+firebaseBom = "33.12.0"
+firebaseFirestoreKtx = "25.1.3"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -18,6 +20,8 @@ kapt = "1.8.20"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
