fixing port errors

--- a/API/dockerfile
+++ b/API/dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.10-slim
 
 # Exposa el port per HTTPS
+EXPOSE 443
 EXPOSE 80
 
 # Instala las dependencias del sistema necesarias para MariaDB
