--- a/API/docker-compose.yaml
+++ b/API/docker-compose.yaml
@@ -1,9 +1,8 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-     context: .
+  api:
+    image: api-app:latest
     container_name: api
     restart: unless-stopped
     ports:
