--- a/API/test-db/docker-compose.yaml
+++ b/API/test-db/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
     image: test-db:latest
     container_name: postgres
     restart: unless-stopped
+    ports:
+      - "5433:5432"
     environment:
       POSTGRES_USER: test_db_user
       POSTGRES_PASSWORD: test_db_password
