--- a/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,26 +16,29 @@
         android:theme="@style/Theme.RellotgeJAIS"
         tools:targetApi="31">
         <activity
-            android:name=".IncidenciasActivity"
+            android:name=".screens.MicroPhoneActivity"
             android:exported="false" />
         <activity
-            android:name=".vititantPlayers"
+            android:name=".screens.IncidenceActivity"
             android:exported="false" />
         <activity
-            android:name=".localPlayers"
+            android:name=".screens.ActionListActivity"
             android:exported="false" />
         <activity
-            android:name=".TarjetasActivty"
+            android:name=".screens.PlayerPickActivity"
             android:exported="false" />
         <activity
-            android:name=".TeamSelect"
+            android:name=".screens.CardPickActivity"
             android:exported="false" />
         <activity
-            android:name=".accions"
+            android:name=".screens.TeamPickActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screens.ActionsActivity"
             android:exported="false"
             android:taskAffinity="" />
         <activity
-            android:name=".MainActivity"
+            android:name=".screens.MainActivity"
             android:exported="true"
             android:taskAffinity="">
             <intent-filter>
