--- a/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -22,6 +21,10 @@
         android:theme="@style/Theme.RefereezyApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".screens.report.MicrophoneActivity"
+            android:screenOrientation="landscape"
+            android:exported="false" />
         <activity
             android:name=".screens.user.LoginActivity"
             android:exported="false"
@@ -72,6 +75,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="firebase_ml_enable_logcat_logging"
+            android:value="false" />
     </application>
 
 </manifest>
