--- a/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
@@ -13,26 +13,33 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.RellotgeJAIS"
         tools:targetApi="31">
         <activity
             android:name=".screens.report.MicroPhoneActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:taskAffinity="" />
         <activity
-            android:name=".screens.report.IncidenceActivity"
-            android:exported="false" />
+            android:name=".screens.report.IncidentActivity"
+            android:exported="false"
+            android:taskAffinity="" />
         <activity
-            android:name=".screens.report.ActionListActivity"
-            android:exported="false" />
+            android:name=".screens.report.IncidentListActivity"
+            android:exported="false"
+            android:taskAffinity="" />
         <activity
             android:name=".screens.report.PlayerPickActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:taskAffinity="" />
         <activity
             android:name=".screens.report.CardPickActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:taskAffinity="" />
         <activity
             android:name=".screens.report.TeamPickActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:taskAffinity="" />
         <activity
             android:name=".screens.report.ActionsActivity"
             android:exported="false"
