--- a/APPS/reloj/RellotgeJAIS/gradle/libs.versions.toml
+++ b/APPS/reloj/RellotgeJAIS/gradle/libs.versions.toml
@@ -8,12 +8,22 @@ material = "1.12.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
 androidx-recyclerview = "1.2.1"
+firebaseBom = "33.12.0"
+firebaseFirestoreKtx = "25.1.3"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
+retrofit = "2.11.0"
+converter = "2.9.0"
+lifecycle = "2.6.2"
+interceptor = "4.11.0"
+glide = "4.14.2"
+kapt = "1.8.20"
 
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
@@ -22,7 +32,12 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "androidx-recyclerview" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converter" }
+lyfecycleandroid = {module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle"}
+http-interceptor = {module = "com.squareup.okhttp3:logging-interceptor", version.ref = "interceptor"}
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
