--- a/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
 
     <application
         android:name=".MyApp"
