--- a/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
@@ -11,11 +11,17 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.RellotgeJAIS"
         tools:targetApi="31">
+        <activity
+            android:name=".screens.user.waitActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screens.user.QrActivity"
+            android:exported="false" />
         <activity
             android:name=".screens.report.MicroPhoneActivity"
             android:exported="false"
