--- a/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.RellotgeJAIS"
         tools:targetApi="31">
         <activity
-            android:name=".screens.user.waitActivity"
+            android:name=".screens.user.WaitActivity"
             android:exported="false" />
         <activity
             android:name=".screens.user.QrActivity"
