--- a/APPS/web/docker-compose.yml
+++ b/APPS/web/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    restart: always
+    restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
