--- a/APPS/web/docker-compose.yml
+++ b/APPS/web/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
-      - NODE_ENV=production
+      - NODE_ENV=development # Changed to development to match the dev script
       - FIREBASE_KEY=${FIREBASE_KEY}
       - FIREBASE_AUTH_DOMAIN=${FIREBASE_AUTH_DOMAIN}
       - FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
@@ -19,4 +19,5 @@ services:
       - REFEREEZY_API_URL=${REFEREEZY_API_URL}
     volumes:
       - ./src:/app/src
+      - ./node_modules:/app/node_modules # To prevent conflicts between container and host node_modules
 
