API, Mobile & clock changes Implemented the Socket.IO events to correctly pair the clock with the app Now they do pair and clock receives a notification when a match is started Fixed some use cases where the app was not clearing correctly the code Fixed some use cases where clock was not clearing correctly the code Fixed dockerization of the socket server Implemented a Config.kt file to store the API URL

--- a/APPS/web/Dockerfile
+++ b/APPS/web/Dockerfile
@@ -20,7 +20,8 @@ COPY tsconfig.json ./
 COPY . .
 
 # Build TypeScript code
-RUN npm run build
+# No need to build if using ts-node-dev, but uncomment if you want to build
+# RUN npm run build
 
 # Expose port
 EXPOSE 3000
