--- a/APPS/web/docker-compose.yml
+++ b/APPS/web/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3.8'
 
 services:
-  web:
+  sockets:
     image: socket-server:latest
+    container_name: sockets
     restart: unless-stopped
     ports:
       - "3000:3000"
