Fixed some pairing event errors
TODO: Fix live web not being able to render/map the data from firebase or whatever

Fix usecases on mobile being able to open a report on the clock and mobile at the same time

--- a/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity
             android:name=".screens.report.PlayerPickActivity"
             android:exported="false"
+            android:launchMode="singleTop"
             android:taskAffinity="" />
         <activity
             android:name=".screens.report.CardPickActivity"
@@ -49,6 +50,7 @@
         <activity
             android:name=".screens.report.ActionsActivity"
             android:exported="false"
+            android:launchMode="singleTop"
             android:taskAffinity="" />
         <activity
             android:name=".screens.user.MainActivity"
