--- a/APPS/movil/RefereezyApp/gradle/libs.versions.toml
+++ b/APPS/movil/RefereezyApp/gradle/libs.versions.toml
@@ -1,7 +1,10 @@
 [versions]
 agp = "8.9.1"
+barcodeScanning = "17.3.0"
+cameraView = "1.4.2"
 firebaseBom = "33.12.0"
 firebaseFirestoreKtx = "25.1.3"
+guava = "32.1.3-android"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -17,11 +20,18 @@ lifecycle = "2.6.2"
 interceptor = "4.11.0"
 glide = "4.14.2"
 kapt = "1.8.20"
+shadowlayout = "1.0.1"
 
 [libraries]
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraView" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraView" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraView" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+barcode-scanning = { module = "com.google.mlkit:barcode-scanning", version.ref = "barcodeScanning" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -35,6 +45,7 @@ lyfecycleandroid = {module = "androidx.lifecycle:lifecycle-viewmodel-ktx", versi
 http-interceptor = {module = "com.squareup.okhttp3:logging-interceptor", version.ref = "interceptor"}
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+shadowlayout = { module = "net.orandja.shadowlayout:shadowlayout", version.ref = "shadowlayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
