--- a/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
@@ -6,10 +6,9 @@
         android:name="android.hardware.camera"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-
 
     <application
         android:name=".MyApp"
@@ -24,9 +23,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".screens.report.MicrophoneActivity"
-            android:screenOrientation="landscape"
+            android:name=".screens.user.ActaActivity"
             android:exported="false" />
+        <activity
+            android:name=".screens.report.MicrophoneActivity"
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".screens.user.LoginActivity"
             android:exported="false"
@@ -81,6 +83,9 @@
         <meta-data
             android:name="firebase_ml_enable_logcat_logging"
             android:value="false" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
