Ya genera Pdf implmentado bien solo falta hacerlo bonito

--- a/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
         android:theme="@style/Theme.RefereezyApp"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.refereezyapp.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
         <activity
             android:name=".screens.user.ActaActivity"
             android:exported="false" />
