--- a/Documentation/mkdocs.yml
+++ b/Documentation/mkdocs.yml
@@ -93,7 +93,8 @@ plugins:
   - search
     #  - enumerate-headings
   - glightbox
-  - git-revision-date-localized
+  - git-revision-date-localized:
+      fallback_to_build_date: true
 
 # TOC
 nav:
