--- a/Documentation/mkdocs.yml
+++ b/Documentation/mkdocs.yml
@@ -99,17 +99,13 @@ plugins:
 # TOC
 nav:
   # Introduction
-  - Home:
-    - English: index.md
-    - Català: index.ca.md
-    - Español: index.es.md
+  - Home / Inici:
+    - English: home.md
+    - Català: home.ca.md
   
   - Company / Empresa:
-    - Overview: empresa/overview.md
-    - Team / Equip: empresa/team.md
-    - Vision / Visió: empresa/vision.md
+    - English: empresa/overview.md
     - Català: empresa/empresa.ca.md
-    - Español: empresa/empresa.es.md
 
   - Applications / Aplicacions:
     - Watch App / Rellotge:
@@ -118,7 +114,6 @@ nav:
       - Technical Documentation: apps/app_rellotge/technical.md
       - User Manual: apps/app_rellotge/user-manual.md
       - Català: apps/app_rellotge/aplicacio-rellotge.ca.md
-      - Español: apps/app_rellotge/aplicacio-rellotge.es.md
     
     - Mobile App / Mòbil:
       - Overview: apps/app_mobile/overview.md
@@ -126,7 +121,6 @@ nav:
       - Technical Documentation: apps/app_mobile/technical.md
       - User Manual: apps/app_mobile/user-manual.md
       - Català: apps/app_mobile/app-mobile.ca.md
-      - Español: apps/app_mobile/app-mobile.es.md
     
     - Web App / Web:
       - Overview: apps/app_web/overview.md
@@ -134,14 +128,12 @@ nav:
       - Technical Documentation: apps/app_web/technical.md
       - User Manual: apps/app_web/user-manual.md
       - Català: apps/app_web/app-web.ca.md
-      - Español: apps/app_web/app-web.es.md
     
     - Website / Web Pública:
       - Overview: apps/website/overview.md
       - Features: apps/website/features.md
       - Technical Documentation: apps/website/technical.md
       - Català: apps/website/website.ca.md
-      - Español: apps/website/website.es.md
   
   - API Documentation:
     - Overview: api/overview.md
@@ -156,7 +148,6 @@ nav:
     - Database Schema: api/database-schema.md
     - Realtime Features: api/realtime.md
     - Català: api/api.ca.md
-    - Español: api/api.es.md
   
   - Development / Desenvolupament:
     - Getting Started: development/getting-started.md
@@ -166,7 +157,6 @@ nav:
     - Firebase Integration: development/firebase.md
     - Contributing: development/contributing.md
     - Català: development/desenvolupament.ca.md
-    - Español: development/desarrollo.es.md
   
   - System Administration / Sistemes:
     - Infrastructure Overview: sysadmin/overview.md
@@ -179,7 +169,6 @@ nav:
     - Network Configuration: sysadmin/network.md
     - Deployment: sysadmin/deployment.md
     - Català: sysadmin/sistemes.ca.md
-    - Español: sysadmin/sistemas.es.md
 
 
 
