Fixed some names and architecture for docs

--- a/Documentation/mkdocs.yml
+++ b/Documentation/mkdocs.yml
@@ -113,49 +113,18 @@ nav:
       - features.md
   - Aplicacions:
     - apps/index.md
-    - Watch App / Rellotge:
+    - Rellotge:
       - Overview: apps/app_rellotge/overview.md
-      - Features: apps/app_rellotge/features.md
-      - Technical Documentation: apps/app_rellotge/technical.md
-      - User Manual: apps/app_rellotge/user-manual.md
-      - Català: 
-        - apps/app_rellotge/aplicacio-rellotge.ca.md
-      - Español: apps/app_rellotge/aplicacio-rellotge.es.md
     
-    - Mobile App / Mòbil:
+    - Mòbil:
       - Overview: apps/app_mobile/overview.md
-      - Features: apps/app_mobile/features.md
-      - Technical Documentation: apps/app_mobile/technical.md
-      - User Manual: apps/app_mobile/user-manual.md
-      - Català: apps/app_mobile/app-mobile.ca.md
-    
-    - App Pairing / Aparellament:
-      - Overview: apps/app_pairing/overview.md
-      - Mobile App Pairing: apps/app_pairing/mobile_pairing.md
-      - Watch App Pairing: apps/app_pairing/watch_pairing.md
-      - Communication Flow: apps/app_pairing/communication_flow.md
-      - Technical Implementation: apps/app_pairing/technical_implementation.md
-      - Troubleshooting: apps/app_pairing/pairing_troubleshooting.md
-      - Català:
-        - Overview: apps/app_pairing/overview.ca.md
-        - Mobile App Pairing: apps/app_pairing/mobile_pairing.ca.md
-        - Watch App Pairing: apps/app_pairing/watch_pairing.ca.md
-        - Communication Flow: apps/app_pairing/communication_flow.ca.md
-        - Technical Implementation: apps/app_pairing/technical_implementation.ca.md
-        - Troubleshooting: apps/app_pairing/pairing_troubleshooting.ca.md
-    
-    - Web App / Web:
+
+
+    - Web de'Administració:
       - Overview: apps/app_web/overview.md
-      - Features: apps/app_web/features.md
-      - Technical Documentation: apps/app_web/technical.md
-      - User Manual: apps/app_web/user-manual.md
-      - Català: apps/app_web/app-web.ca.md
     
-    - Website / Web Pública:
+    - Web Pública:
       - Overview: apps/website/overview.md
-      - Features: apps/website/features.md
-      - Technical Documentation: apps/website/technical.md
-      - Català: apps/website/website.ca.md
   
   - API Documentation:
     - Overview: api/overview.md
